force-app/main/default/objects/Commercial_Line__c/Commercial_Line__c.object-meta.xml
<CustomObject>
<deploymentStatus>Deployed</deploymentStatus>
    <description>Version-bound contract lines, deliverables and acceptance milestones for a Resource 360 commercial reference.</description>
<enableBulkApi>true</enableBulkApi><enableFeeds>false</enableFeeds><enableHistory>true</enableHistory><enableReports>true</enableReports><enableSearch>true</enableSearch><enableSharing>true</enableSharing>
<label>Commercial Line</label>
    <nameField><displayFormat>CL-{00000}</displayFormat><label>Commercial Line Number</label><trackHistory>false</trackHistory><type>AutoNumber</type></nameField>
    <pluralLabel>Commercial Lines</pluralLabel><sharingModel>ControlledByParent</sharingModel><visibility>Public</visibility>
</CustomObject>