force-app/main/default/objects/Commercial_Line__c/fields/Accepted_By__c.field-meta.xml
<CustomField><fullName>Accepted_By__c</fullName><deleteConstraint>SetNull</deleteConstraint><label>Accepted By</label><referenceTo>User</referenceTo><relationshipLabel>Accepted Commercial Lines</relationshipLabel><relationshipName>Accepted_Commercial_Lines</relationshipName><type>Lookup</type></CustomField>