force-app/main/default/objects/Commercial_Line__c/fields/Commercial_Reference__c.field-meta.xml
<CustomField><fullName>Commercial_Reference__c</fullName><label>Commercial Reference</label><referenceTo>Commercial_Reference__c</referenceTo><relationshipLabel>Commercial Lines</relationshipLabel><relationshipName>Commercial_Lines</relationshipName><relationshipOrder>0</relationshipOrder><reparentableMasterDetail>false</reparentableMasterDetail><type>MasterDetail</type><writeRequiresMasterRead>false</writeRequiresMasterRead></CustomField>