force-app/main/default/objects/Commercial_Line__c/fields/Description__c.field-meta.xml
<CustomField><fullName>Description__c</fullName><label>Description</label><length>32000</length><visibleLines>4</visibleLines><type>LongTextArea</type></CustomField>