force-app/main/default/objects/Commercial_Line__c/fields/Line_Type__c.field-meta.xml
<CustomField><fullName>Line_Type__c</fullName><label>Line Type</label><required>true</required><type>Picklist</type><valueSet><restricted>true</restricted><valueSetDefinition><sorted>false</sorted>
<value><fullName>Service</fullName><default>true</default><label>Service</label></value><value><fullName>Deliverable</fullName><default>false</default><label>Deliverable</label></value><value><fullName>Acceptance Milestone</fullName><default>false</default><label>Acceptance Milestone</label></value><value><fullName>Resource</fullName><default>false</default><label>Resource</label></value><value><fullName>Expense</fullName><default>false</default><label>Expense</label></value>
</valueSetDefinition></valueSet></CustomField>