force-app/main/default/objects/Commercial_Line__c/fields/Status__c.field-meta.xml
<CustomField><fullName>Status__c</fullName><label>Status</label><required>true</required><trackHistory>true</trackHistory><type>Picklist</type><valueSet><restricted>true</restricted><valueSetDefinition><sorted>false</sorted>
<value><fullName>Planned</fullName><default>true</default><label>Planned</label></value><value><fullName>Active</fullName><default>false</default><label>Active</label></value><value><fullName>Complete</fullName><default>false</default><label>Complete</label></value><value><fullName>Cancelled</fullName><default>false</default><label>Cancelled</label></value>
</valueSetDefinition></valueSet></CustomField>