force-app/main/default/objects/Commercial_Line__c/fields/Value__c.field-meta.xml
<CustomField><fullName>Value__c</fullName><label>Line Value</label><precision>18</precision><scale>2</scale><type>Currency</type></CustomField>