force-app/main/default/objects/Commercial_Line__c/fields/Work_Unit__c.field-meta.xml
<CustomField><fullName>Work_Unit__c</fullName><deleteConstraint>SetNull</deleteConstraint><label>Work Unit</label><referenceTo>Work_Unit__c</referenceTo><relationshipLabel>Commercial Lines</relationshipLabel><relationshipName>Commercial_Lines</relationshipName><type>Lookup</type></CustomField>