force-app/main/default/objects/Commercial_Line__c/validationRules/Commercial_Line_Acceptance.validationRule-meta.xml
<ValidationRule><fullName>Commercial_Line_Acceptance</fullName><active>true</active><errorConditionFormula>AND(ISPICKVAL(Status__c, "Complete"), Acceptance_Required__c, NOT(ISPICKVAL(Acceptance_Status__c, "Accepted")))</errorConditionFormula><errorMessage>A required commercial acceptance must be accepted before the line can complete.</errorMessage></ValidationRule>